@@ -43,6 +43,8 @@ message(STATUS "NO_UNIX_SIGNAL_HANDLING = ${NO_UNIX_SIGNAL_HANDLING}")
 message(STATUS "NO_UNIX_BACKTRACE_SUPPORT = ${NO_UNIX_BACKTRACE_SUPPORT}")
 message(STATUS "NO_WINDOWS_SEH =        ${NO_WINDOWS_SEH}")
 message(STATUS)
+message(STATUS "ENABLE_CSA_ALPHA =      ${ENABLE_CSA_ALPHA}")
+message(STATUS)
 if(NOT DEFINED BUILD_SHARED_LIBS)
     message(STATUS "BUILD_SHARED_LIBS =     OFF")
 else()
