@@ -18,4 +18,6 @@ Deprecations:
 
 Other:
 - Updated Qt to 6.8.2 (official Windows release only).
+- added CMake target `run-clang-tidy-csa` to run Clang Static Analyzer
+- added CMake option `ENABLE_CSA_ALPHA` to enable the Clang Static Analyzer alpha checkers
 -
